<resources>
    <string name="app_name">PQuiz</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label">Please fill all fields correctly</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="full_name">Full Name</string>
    <string name="personal_details">Personal details</string>
    <string name="email">Email</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">SIGN UP</string>
    <string name="login_ready">Already have an account? Login</string>
    <string name="pquiz">PQuiz</string>
    <string name="quiz_time">Quiz time!</string>
    <string name="submit">Submit</string>
    <string name="next">Next</string>
    <string name="don_t_have_account_yet">Don\'t have account yet? Sign up.</string>
    <string name="quit_quiz">Quit Quiz  </string>

    <string-array name="category_array">
        <item>Select topic</item>
        <item>Variable Names</item>
        <item>Basic Operators</item>
        <item>Core Data Types</item>
        <item>Numeric Types</item>
        <item>Precedence ad Associativity -1</item>
        <item>Precedence ad Associativity -2</item>
        <item>Bitwise -1</item>
        <item>Bitwise -2</item>
        <item>Boolean</item>
        <item>Formatting-1</item>
    </string-array>
</resources>