<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.github.bukunmiola.pquiz.ui.SignInFragment">


    <LinearLayout
        android:id="@+id/welcome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_logo"
            android:fontFamily="cursive"
            android:padding="20dp"
            android:layout_gravity="center"
            android:paddingStart="20dp"
            android:paddingEnd="30dp"
            android:paddingBottom="20dp"
            android:text="PQuiz"
            android:textColor="@color/textColor"
            android:textSize="60sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/inputs"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@+id/welcome"
        app:layout_constraintStart_toStartOf="@id/welcome"
        app:layout_constraintTop_toBottomOf="@+id/welcome">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/label"
            android:textAlignment="center"
            android:textStyle="italic" />


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/e_mail"
            android:padding="10dp"
            app:endIconMode="clear_text"
            app:hintTextColor="#fff"
            app:startIconDrawable="@drawable/ic_mail">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/textColor"
                android:textSize="16sp" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:padding="10dp"
            app:endIconMode="password_toggle"
            app:hintTextColor="#fff"
            app:startIconDrawable="@drawable/ic_key">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/textColor"
                android:textSize="16sp" />


        </com.google.android.material.textfield.TextInputLayout>




    </LinearLayout>

    <TextView
        android:id="@+id/forgot_pw"
        style="@style/view"
        android:paddingStart="15dp"
        android:text="Forgot Password?"
        app:layout_constraintEnd_toEndOf="@id/inputs"
        app:layout_constraintStart_toStartOf="@id/inputs"
        app:layout_constraintTop_toBottomOf="@id/inputs" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonLogin"
        style="@style/button"
        android:text="@string/login"
        android:textColor="@color/white"
        app:cornerRadius="20dp"
        app:strokeColor="@color/textColor"
        app:strokeWidth="2dp"
        app:layout_constraintEnd_toEndOf="@id/forgot_pw"
        app:layout_constraintStart_toStartOf="@id/forgot_pw"
        app:layout_constraintTop_toBottomOf="@id/forgot_pw" />



    <TextView
        android:id="@+id/sign_up"
        style="@style/view"
        android:text="Don't have account yet? Sign up."
        app:layout_constraintEnd_toEndOf="@id/buttonLogin"
        app:layout_constraintStart_toStartOf="@id/buttonLogin"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />


</androidx.constraintlayout.widget.ConstraintLayout>