<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.questions.QuestionsFragment">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


        <TextView
            android:id="@+id/question_counter_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quiz_time"
            android:layout_marginTop="30dp"
            android:layout_marginStart="50dp"
            android:textSize="20sp"
            android:textColor="@color/textColor"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
            android:id="@+id/text_instruction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           android:layout_marginStart="20dp"
           android:layout_marginEnd="20dp"
           android:layout_marginTop="20dp"
           android:textSize="16sp"
           app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/question_counter_tv" />
        <TextView
            android:id="@+id/text_expression"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="15dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/text_instruction"
            app:layout_constraintStart_toStartOf="@id/text_instruction"
            app:layout_constraintTop_toBottomOf="@id/text_instruction" />

    <RadioGroup
        android:id="@+id/radio_option_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@id/text_expression"
        app:layout_constraintStart_toStartOf="@id/text_expression"
        app:layout_constraintTop_toBottomOf="@id/text_expression">

        <RadioButton
            android:id="@+id/radio_option_a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:paddingStart="10dp"
            android:background="@drawable/radio_btn_bg"
            android:clickable="true"
            android:focusable="true"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radio_option_b"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/radio_btn_bg"
            android:layout_marginBottom="10dp"
            android:paddingStart="10dp"
            android:clickable="true"
            android:focusable="true"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radio_option_c"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/radio_btn_bg"
            android:paddingStart="10dp"
            android:layout_marginBottom="10dp"
            android:clickable="true"
            android:focusable="true"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radio_option_d"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:background="@drawable/radio_btn_bg"
            android:clickable="true"
            android:focusable="true"
            android:textSize="16sp" />
    </RadioGroup>

        <TextView
            android:id="@+id/text_explanation"
            android:visibility="gone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textSize="16sp"
            android:layout_marginBottom="5dp"
            app:layout_constraintEnd_toEndOf="@id/radio_option_group"
            app:layout_constraintStart_toStartOf="@id/radio_option_group"
            app:layout_constraintTop_toBottomOf="@id/radio_option_group" />

    <Button
        android:id="@+id/next_btn"
        android:layout_width="143dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/neutral_button_bg"
        android:text="@string/next"
        app:layout_constraintEnd_toEndOf="@id/radio_option_group"
        app:layout_constraintTop_toBottomOf="@id/text_explanation" />

    <Button
        android:id="@+id/submission_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/neutral_button_bg"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:visibility="gone"
        android:text="@string/submit"
        app:layout_constraintEnd_toEndOf="@id/radio_option_group"
        app:layout_constraintBottom_toBottomOf="@id/quit_quiz"
        app:layout_constraintTop_toTopOf="@id/quit_quiz" />

    <TextView
        android:id="@+id/quit_quiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/label_bg"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:text="@string/quit_quiz"
        android:textSize="20sp"
        app:drawableEndCompat="@drawable/ic_power_switch"
        app:drawableTint="@color/textColor"
        app:layout_constraintStart_toStartOf="@+id/radio_option_group"
        app:layout_constraintTop_toBottomOf="@id/text_explanation"  />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>